fix: reduce spacing in components

--- a/src/components/common/Table/Table.scss
+++ b/src/components/common/Table/Table.scss
@@ -44,7 +44,8 @@
         background: linear-gradient(180deg, #212121 0%, #000000 100%) padding-box, linear-gradient(180deg, #1FECFF 0%, #009DFF 100%) border-box;
         border: 1.5px solid transparent;
         border-radius: 3rem;
-        padding: 7.2rem 7.4rem;
+        // padding: 7.2rem 7.4rem;
+        padding: 6rem 6rem 4rem;
 
         @media (max-width: 1579px) {
             padding: 6rem 6rem 4rem;
