--- a/src/components/pages/Dashboard/StakingStatement/StakingStatement.scss
+++ b/src/components/pages/Dashboard/StakingStatement/StakingStatement.scss
@@ -1,7 +1,7 @@
 @import "../../../../assets/theme/_var.scss";
 
 .staking_statements {
-    padding: 22.4rem 0 20rem;
+    padding: 14rem 0 14rem;
     overflow-x: clip;
 
     @media (max-width: 1399px) {
