--- a/src/components/pages/Dashboard/StartEarning/StartEarning.scss
+++ b/src/components/pages/Dashboard/StartEarning/StartEarning.scss
@@ -8,7 +8,7 @@
     align-items: center;
     text-align: center;
     background: url("../../../../assets/images/dashboard-banner.png") top center/contain no-repeat;
-    padding: 20rem 0;
+    padding: 10rem 0;
 
     @media (max-width: 1399px) {
         padding: 10rem 0;
