--- a/src/components/pages/Homepage/Banner/Banner.scss
+++ b/src/components/pages/Homepage/Banner/Banner.scss
@@ -4,7 +4,7 @@
 
     .banner_in {
         height: 90dvh;
-        min-height: 84.7rem;
+        min-height: 74rem;
         display: flex;
         align-items: center;
         justify-content: center;
