--- a/src/components/pages/Homepage/LeaderBoardSec/LeaderBoardSec.scss
+++ b/src/components/pages/Homepage/LeaderBoardSec/LeaderBoardSec.scss
@@ -2,7 +2,7 @@
 
 .leaderboard_sec {
     text-align: center;
-    min-height: 100dvh;
+    // min-height: 100dvh;
     display: flex;
     align-items: center;
     // background: url("../../../../assets/images/leaderboard-banner-bg.png") center/cover no-repeat;
