--- a/src/components/pages/Homepage/PoweredBy/PoweredBy.scss
+++ b/src/components/pages/Homepage/PoweredBy/PoweredBy.scss
@@ -3,7 +3,7 @@
 .powered_by {
     position: relative;
     z-index: 1;
-    padding: 17.2rem 0 15.8rem;
+    padding: 10rem 0;
 
     @media (max-width: 1479px) {
         padding: 10rem 0;
@@ -189,7 +189,7 @@
 }
 
 .join_sec {
-    padding-bottom: 7.4rem;
+    padding-bottom: 4rem;
 
     h3 {
         font-size: 2.5rem;
