--- a/src/components/pages/Homepage/RevenuePool/RevenuePool.scss
+++ b/src/components/pages/Homepage/RevenuePool/RevenuePool.scss
@@ -1,7 +1,7 @@
 @import "../../../../assets/theme/_var.scss";
 
 .revenue_pool_sec {
-    padding: 3.7rem 0 19.6rem;
+    padding: 3.7rem 0 10rem;
     overflow-x: clip;
 
     .revenue_pool_box {
@@ -109,7 +109,7 @@
         text-align: center;
 
         h3 {
-            margin: 7.3rem 0 3.1rem;
+            margin: 4rem 0 2.5rem;
             font-size: 13rem;
             font-weight: 700;
             line-height: 13rem;
@@ -201,7 +201,7 @@
         }
 
         h2 {
-            margin: 13.6rem 0 6.4rem;
+            margin: 6rem 0 4rem;
             font-weight: 700;
             color: $secondaryclr;
             font-size: 6rem;
