--- a/src/components/pages/Leaderboard/Graphs/Graphs.scss
+++ b/src/components/pages/Leaderboard/Graphs/Graphs.scss
@@ -1,7 +1,7 @@
 @import "../../../../assets/theme/_var.scss";
 
 .graphs_design {
-    padding: 0 0 9rem;
+    padding: 0 0 6rem;
 
     .graphs_in {
         .nav {
