--- a/src/components/pages/Profile/Profile.scss
+++ b/src/components/pages/Profile/Profile.scss
@@ -472,7 +472,7 @@
 // }
 
 .profile_sec {
-    padding: 30.3rem 0 21.6rem;
+    padding: 12rem 0 10rem;
 
     .nav {
         margin-left: 3rem;
